--- a/src/Svn/packages.config
+++ b/src/Svn/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FSharp.Configuration" version="0.6.2" targetFramework="net462" />
   <package id="FSharp.Data.XMLProvider" version="2.3.14159" targetFramework="net462" />
 </packages>
